add app css file
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Crissaegrim: SOTN File Editor</title>
+    <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
-  <body style="margin:0; padding: 0; background-color:#000;">
-    <img src="assets/images/background_selectfile.png" />
+  <body>
+    <a href="" class="button file "
   </body>
 
   <script>
