style and place load button
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
-    <a href="" class="button file "
+    <a href="" id="fileselect"></a>
   </body>
 
   <script>
