--- a/app/index.html
+++ b/app/index.html
@@ -14,5 +14,6 @@
     <script src="../build/common.js"></script>
     <script src="../build/angular2.js"></script>
     <script src="../build/app.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
