--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <base href="">
     <meta charset="UTF-8">
     <title>Crissaegrim: SOTN File Editor</title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
